--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,4 +1,5 @@
 <%= form_with( model: @task, local: true, url: choose_new_or_edit ) do |form| %>
+
   <% if @task.errors.any? %>
     <div id="error_explanation">
       <h2><%= @task.errors.count %>件のエラーがあります。</h2>
@@ -9,14 +10,24 @@
       </ul>
     </div>
   <% end %>
-  <div class="blog_title">
+
+  <div class="task_title">
     <%= form.label :タスク名 %>
     <%= form.text_field :title %>
   </div>
-  <div class="blog_content">
-    <%= form.label :タスク詳細 %>
+
+  <div class="task_content">
+    <%= form.label :詳しい内容 %>
     <%= form.text_field :content %>
   </div>
+
+  <div class="task_deadline">
+    <%= form.label :終了期限 %>
+    <%= form.date_field :task_deadline %>
+  </div>
+
   <%= form.submit '投稿する'%>
+
 <% end %>
+
 <%= link_to '一覧画面に戻る', tasks_path %>
