--- a/app/views/tasks/confirm.html.erb
+++ b/app/views/tasks/confirm.html.erb
@@ -2,8 +2,10 @@
 <%= form_with(model: @task, local: true) do |form| %>
   <%= form.hidden_field :title %>
   <%= form.hidden_field :content %>
-  <p>タイトル:<%= @task.title %></p>
-  <p>本文:<%= @task.content %></p>
+  <%= form.hidden_field :task_deadline %>
+  <p>タスク名:<%= @task.title %></p>
+  <p>詳しい内容:<%= @task.content %></p>
+  <p>終了期限:<%= @task.task_deadline %></p>
   <%= form.submit  "登録する" %>
   <%= form.submit "戻る", name: 'back' %>
 <% end %>
