--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,18 +1,20 @@
 <h1>タスク一覧</h1>
 <p><%= notice %></p>
+<%= link_to '新規作成', new_task_path %>
 <table>
   <tr>
-    <th>タイトル</th>
-    <th>内容</th>
+    <th>タスク名</th>
+    <th>詳しい内容</th>
+    <th>終了期限</th>
   </tr>
 <% @tasks.each do |task| %>
   <tr class="task_row">
     <td><%= task.title %></td>
     <td><%= task.content %></td>
+    <td><%= task.task_deadline %></td>
     <td><%= link_to '詳細', task_path(task.id) %></td>
     <td><%= link_to '編集', edit_task_path(task.id) %></td>
     <td><%= link_to '削除', task_path(task.id), method: :delete , data: { confirm: '本当に編集していいですか？' } %></td>
   </tr>
 <% end %>
 </table>
-<%= link_to '新しくブログを投稿する', new_task_path %>
