--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,6 +1,7 @@
 <h1>タスク一覧</h1>
 <p><%= notice %></p>
 <%= link_to '新規作成', new_task_path %>
+<%= link_to "終了期限でソートする", tasks_path(sort_expired: "true") %>
 <table>
   <tr>
     <th>タスク名</th>
