--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -31,6 +31,11 @@
     <%= form.select :status, Task.statuses.keys %>
   </div>
 
+  <div class="task_priority">
+    <%= form.label :優先順位 %>
+    <%= form.select :priority, Task.priorities.keys %>
+  </div>
+
   <%= form.submit '投稿する'%>
 
 <% end %>
