--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,31 +1,47 @@
-<h1>タスク一覧</h1>
+<div class="logo">
+  <%= image_tag 'logo.png' %>
+</div>
 <p><%= notice %></p>
-<%= link_to '新規作成', new_task_path %>
+<br>
+<div class="btn-area">
+  <%= link_to 'Create New Task', new_task_path, class:"create_btn" %>
+</div><br><br>
 <%= link_to '終了期限でソートする', tasks_path(sort_expired: "true") %>
 <%= link_to '優先順位でソートする', tasks_path(sort_priority: "true") %>
 <%= form_with url: tasks_path, method: :get, local: true do |form| %>
+  <%#= form.label :タスク名%>
   <%= form.text_field :title %>
+  <%#= form.label :ステータス名%>
   <%= form.select :status, Task.statuses.keys, include_blank: true %>
+  <%#= form.label :Label%>
+  <%= form.select :priority, Task.priorities.keys, include_blank: true %>
   <%= form.submit '検索する' %>
 <% end %>
-<table>
-  <tr>
-    <th>タスク名</th>
-    <th>詳しい内容</th>
-    <th>終了期限</th>
-    <th>ステータス</th>
-    <th>優先順位</th>
-  </tr>
+<table class="table table-hover shadow-sm p-3 mb-5 bg-white rounded">
+  <thead>
+    <tr>
+      <th>タスク名</th>
+      <th>詳しい内容</th>
+      <th>終了期限</th>
+      <th>ステータス</th>
+      <th>優先順位</th>
+      <th></th>
+      <th></th>
+      <th></th>
+    </tr>
+  </thead>
 <% @tasks.each do |task| %>
   <tr class="task_row">
-    <td><%= task.title %></td>
-    <td><%= task.content %></td>
-    <td><%= task.task_deadline %></td>
-    <td><%= task.status %></td>
-    <td><%= task.priority %></td>
-    <td><%= link_to '詳細', task_path(task.id) %></td>
-    <td><%= link_to '編集', edit_task_path(task.id) %></td>
-    <td><%= link_to '削除', task_path(task.id), method: :delete , data: { confirm: '本当に編集していいですか？' } %></td>
+    <tbody>
+      <td><%= task.title %></td>
+      <td><%= task.content %></td>
+      <td><%= task.task_deadline %></td>
+      <td><%= task.status %></td>
+      <td><%= task.priority %></td>
+      <td><%= link_to '詳細', task_path(task.id) , class:"btn btn-sm btn-outline-secondary"%></td>
+      <td><%= link_to '編集', edit_task_path(task.id) , class:"btn btn-sm btn-outline-secondary"%></td>
+      <td><%= link_to '削除', task_path(task.id), method: :delete , data: { confirm: '本当に編集していいですか？' } , class:"btn btn-sm btn-outline-secondary"%></td>
+    </tbody>
   </tr>
 <% end %>
 </table>
