--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -10,11 +10,11 @@
 <%= link_to '終了期限でソートする', tasks_path(sort_expired: "true") %>
 <%= link_to '優先順位でソートする', tasks_path(sort_priority: "true") %>
 <%= form_with url: tasks_path, method: :get, local: true do |form| %>
-  <%#= form.label :タスク名%>
+  <%= form.label :タスク名%>
   <%= form.text_field :title %>
-  <%#= form.label :ステータス名%>
+  <%= form.label :ステータス名%>
   <%= form.select :status, Task.statuses.keys, include_blank: true %>
-  <%#= form.label :Label%>
+  <%= form.label :Label%>
   <%= form.select :priority, Task.priorities.keys, include_blank: true %>
   <%= form.submit '検索する', id: 'tasks-index_search-button' %>
 <% end %>
