--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -25,4 +25,6 @@
    text-align: center;
    font-size: 1rem;
    margin-bottom: 100px;
+   background-image: url("/assets/background.png");
+   background-size: cover;
  }
