--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -10,33 +10,39 @@
       </ul>
     </div>
   <% end %>
+  <div class="container">
+    <div class="task_title form">
+      <%= form.label :タスク名, class:"label" %><br>
+      <%= form.text_field :title, class:"input_title"%>
+    </div>
 
-  <div class="task_title">
-    <%= form.label :タスク名 %>
-    <%= form.text_field :title %>
+    <div class="task_content form">
+      <%= form.label :詳しい内容 ,class:"label"%><br>
+      <%= form.text_field :content, class:"input_content" %>
+    </div>
+
+    <div class="task_deadline form">
+      <%= form.label :終了期限 %>
+      <%= form.date_field :task_deadline, class:"pulldown" %>
+    </div>
+
+    <div class="task_status form">
+      <%= form.label :ステータス %>
+      <%= form.select :status, Task.statuses.keys %>
+    </div>
+
+    <div class="task_priority form">
+      <%= form.label :優先順位 %>
+      <%= form.select :priority, Task.priorities.keys %>
+    </div>
+    <br>
+
+    <%= form.submit '投稿する', id: 'tasks-form_submit', class:"create_btn" %>
+
+    <br>
+    <br>
+
   </div>
-
-  <div class="task_content">
-    <%= form.label :詳しい内容 %>
-    <%= form.text_field :content %>
-  </div>
-
-  <div class="task_deadline">
-    <%= form.label :終了期限 %>
-    <%= form.date_field :task_deadline %>
-  </div>
-
-  <div class="task_status">
-    <%= form.label :ステータス %>
-    <%= form.select :status, Task.statuses.keys %>
-  </div>
-
-  <div class="task_priority">
-    <%= form.label :優先順位 %>
-    <%= form.select :priority, Task.priorities.keys %>
-  </div>
-
-  <%= form.submit '投稿する', id: 'tasks-form_submit' %>
 
 <% end %>
 
