--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -25,7 +25,7 @@
    text-align: center;
    font-size: 1rem;
    margin-bottom: 100px;
-   background-image: url("/assets/background.png");
+   background-image: url("/assets/background2.jpg");
    background-size: cover;
  }
 
