--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -24,10 +24,10 @@
 
 .create_btn {
     text-decoration: none;
-    background:#00ebc7;
+    background: black;
     text-align:center;
-    border:2px solid #00ebc7;
-    color:#FFFFFF;
+    border:2px solid black;
+    color: white;
     font-size: 1.3rem;
     font-weight:bold;
     border-radius:20px;
@@ -36,6 +36,48 @@
 }
 .create_btn:hover{
     background:#FFFFFF;
-    color:#00ebc7;
+    color: black;
     box-shadow:none;
+}
+
+.input_title {
+  position: relative;
+  width: 500px;
+  height: 50px;
+  border: none;
+  border-radius: 5px;
+  outline: none;
+}
+
+.input_content {
+  position: relative;
+  width: 500px;
+  height: 150px;
+  border: none;
+  border-radius: 5px;
+  outline: none;
+}
+
+h1 {
+  color: white;
+}
+
+.form {
+  color: white;
+}
+
+.pulldown {
+  margin-top: 20px;
+  font-size: 2rem;
+  width: 150px;
+  border: none;
+}
+
+.task_status {
+  padding-top: 10px;
+  font-size: 1.5rem;
+}
+
+.task_priority {
+  font-size: 1.5rem;
 }
