--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -81,3 +81,10 @@ h1 {
 .task_priority {
   font-size: 1.5rem;
 }
+
+.container {
+  background-color: white;
+  opacity: 0.8;
+  width: 600px;
+  border-radius: 5px;
+}
