--- a/app/views/tasks/confirm.html.erb
+++ b/app/views/tasks/confirm.html.erb
@@ -1,17 +1,20 @@
 <br>
-<h3>以下の内容で、送信する。</h3>
 <br>
-<%= form_with(model: @task, local: true) do |form| %>
-  <%= form.hidden_field :title %>
-  <%= form.hidden_field :content %>
-  <%= form.hidden_field :task_deadline %>
-  <%= form.hidden_field :status %>
-  <%= form.hidden_field :priority %>
-  <p>タスク名:<%= @task.title %></p>
-  <p>詳しい内容:<%= @task.content %></p>
-  <p>終了期限:<%= @task.task_deadline %></p>
-  <p>ステータス:<%= @task.status %></p>
-  <p>優先順位:<%= @task.priority %></p>
-  <%= form.submit  "登録する" %>
-  <%= form.submit "戻る", name: 'back' %>
-<% end %>
+<div class="container">
+  <h3>以下の内容で、送信する。</h3>
+  <br>
+  <%= form_with(model: @task, local: true) do |form| %>
+    <%= form.hidden_field :title %>
+    <%= form.hidden_field :content %>
+    <%= form.hidden_field :task_deadline %>
+    <%= form.hidden_field :status %>
+    <%= form.hidden_field :priority %>
+    <p>タスク名:<%= @task.title %></p>
+    <p>詳しい内容:<%= @task.content %></p>
+    <p>終了期限:<%= @task.task_deadline %></p>
+    <p>ステータス:<%= @task.status %></p>
+    <p>優先順位:<%= @task.priority %></p>
+    </div>
+    <%= form.submit  "登録する" %>
+    <%= form.submit "戻る", name: 'back' %>
+  <% end %>
