--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -22,7 +22,7 @@
 
     <div class="task_deadline form">
       <%= form.label :終了期限 %>
-      <%= form.date_field :task_deadline, class:"pulldown" %>
+      <%= form.date_field :task_deadline %>
     </div>
 
     <div class="task_status form">
