--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -18,6 +18,7 @@
 <table class="table table-hover shadow-sm p-3 mb-5 bg-white rounded">
   <thead>
     <tr>
+      <th>ユーザー名</th>
       <th>タスク名</th>
       <th>詳しい内容</th>
       <th><%= link_to '終了期限 ▼', tasks_path(sort_expired: "true") %></th>
@@ -30,7 +31,9 @@
   </thead>
   <tbody>
     <% @tasks.each do |task| %>
+    <% if task.user_id == current_user.id %>
       <tr class="task_row">
+        <td><%= task.user.name %></td>
         <td id=<%= "tasks-index_row_title-#{task.id}" %>><%= task.title %></td>
         <td id=<%= "tasks-index_row_content-#{task.id}" %>><%= task.content %></td>
         <td id=<%= "tasks-index_row_task_deadline-#{task.id}" %>><%= task.task_deadline %></td>
@@ -40,6 +43,7 @@
         <td><%= link_to '編集', edit_task_path(task.id) , class:"btn btn-sm btn-outline-secondary"%></td>
         <td><%= link_to '削除', task_path(task.id), method: :delete , data: { confirm: '本当に編集していいですか？' } , class:"btn btn-sm btn-outline-secondary"%></td>
       </tr>
+    <% end %>
     <% end %>
   </tbody>
 </table>
