--- a/app/views/tasks/confirm.html.erb
+++ b/app/views/tasks/confirm.html.erb
@@ -4,11 +4,13 @@
   <h3>以下の内容で、送信する。</h3>
   <br>
   <%= form_with(model: @task, local: true) do |form| %>
+    <%= form.hidden_field :user_name %>
     <%= form.hidden_field :title %>
     <%= form.hidden_field :content %>
     <%= form.hidden_field :task_deadline %>
     <%= form.hidden_field :status %>
     <%= form.hidden_field :priority %>
+    <p>ユーザネーム:<%= @task.user.name %></p>
     <p>タスク名:<%= @task.title %></p>
     <p>詳しい内容:<%= @task.content %></p>
     <p>終了期限:<%= @task.task_deadline %></p>
