--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,4 +1,11 @@
-<h1>タスク詳細画面</h1>
-<p>タイトル: <%= @task.title %></p>
-<p>内容: <%= @task.content %></p>
+<br>
+<div class="container">
+  <h3>タスク詳細画面</h3>
+  <p>ユーザーネーム: <%= @task.user.name %></p>
+  <p>タイトル: <%= @task.title %></p>
+  <p>内容: <%= @task.content %></p>
+  <p>終了期限: <%= @task.task_deadline %></p>
+  <p>ステータス: <%= @task.status %></p>
+  <p>優先順位: <%= @task.priority %></p>
+</div>
 <%= link_to '一覧画面に戻る', tasks_path %>
