add css +login-form,+sign-up-form

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -27,6 +27,8 @@
    margin-bottom: 100px;
    background-image: url("/assets/background2.jpg");
    background-size: cover;
+   font-family: 'Open Sans';
+   font-weight: 100;
  }
 
  table {
