--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -5,6 +5,7 @@
         <th>ユーザーID</th>
         <th>ユーザーネーム</th>
         <th>メールアドレス</th>
+        <th>管理者権限</th>
         <th>タスク投稿数</th>
         <th></th>
         <th></th>
@@ -17,6 +18,7 @@
           <td><%= user.id %></td>
           <td><%= user.name %></td>
           <td><%= user.email %></td>
+          <td><%= user.admin %></td>
           <td><%= user.tasks.count %></td>
           <td><%= link_to '詳細', admin_user_path(user.id) , class:"btn btn-sm btn-outline-secondary"%></td>
           <td><%= link_to '編集', edit_admin_user_path(user.id) , class:"btn btn-sm btn-outline-secondary"%></td>
