--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -51,3 +51,10 @@
     transition: 250ms background ease-in;
   }
 }
+
+.user_show {
+  margin: 50px;
+  padding:100px;
+  background-color: rgba(white, .5);
+  border-radius:30px;
+}
