--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,22 +15,30 @@
 
   <body>
     <header class="header">
-      <div class="logo">
-        <%= image_tag 'logo.png' %>
-      </div>
-      <% if logged_in? %>
-        <%= link_to "PROFILE", user_path(current_user.id) %>
-        <%= link_to "TASKS", tasks_path %>
-        <%= link_to "CREATE TASK", new_task_path %>
-        <%= link_to "LOGOUT", session_path(current_user.id), method: :delete %>
-      <% else %>
-        <%= link_to "SIGN UP", new_user_path %>
-        <%= link_to "LOGIN", new_session_path %>
-      <% end %>
-      <% flash.each do |key, value| %>
-      <%= content_tag(:div, value, class: "#{key}") %>
-      <% end %>
+      <h1>
+        <div class="logo">
+          <%= image_tag 'logo2.png' %>
+        </div>
+      </h1>
+      <nav class="pc-nav">
+        <ul>
+          <% if logged_in? %>
+            <li><%= link_to "PROFILE", user_path(current_user.id), class:"link" %></li>
+            <li><%= link_to "TASKS", tasks_path, class:"link" %></li>
+            <li><%= link_to "CREATE TASK", new_task_path, class:"link" %></li>
+            <li><%= link_to "LOGOUT", session_path(current_user.id), method: :delete , class:"link"%></li>
+          <% else %>
+            <li><%= link_to "SIGN UP", new_user_path, class:"link" %></li>
+            <li><%= link_to "LOGIN", new_session_path, class:"link" %></li>
+          <% end %>
+        </ul>
+      </nav>
     </header>
+    <div class="alert-danger" role="alert">
+    <% flash.each do |key, value| %>
+    <%= content_tag(:div, value, class: "#{key}") %>
+    <% end %>
+    </div>
     <%= yield %>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
