--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,6 @@
 <h1><%= @user.name %>のページ</h1>
-<p>メールアドレス: <%= @user.email %></p>
+<div class="user_show">
+  <p>メールアドレス: <%= @user.email %></p>
+</div>
+
+<h1>YOUR　TASK　↓</h1>
