--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,33 +1,10 @@
-body {
-  background-color: #fff;
-  color: #333;
-  margin: 33px; }
+//
+//
+// th {
+//   padding-bottom: 5px; }
 
-body, p, ol, ul, td {
-  font-family: verdana, arial, helvetica, sans-serif;
-  font-size: 13px;
-  line-height: 18px; }
-
-pre {
-  background-color: #eee;
-  padding: 10px;
-  font-size: 11px; }
-
-a {
-  color: #000; }
-
-a:visited {
-  color: #666; }
-
-a:hover {
-  color: #fff;
-  background-color: #000; }
-
-th {
-  padding-bottom: 5px; }
-
-td {
-  padding: 0 5px 7px; }
+// td {
+//   padding: 0 5px 7px; }
 
 div.field,
 div.actions {
@@ -62,4 +39,5 @@ div.actions {
   list-style: square; }
 
 label {
-  display: block; }
+  color: white;
+  padding: 10px; }
