--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,45 +1,49 @@
 <%= form_with( model: @task, local: true, url: choose_new_or_edit ) do |form| %>
 
-  <% if @task.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= @task.errors.count %>件のエラーがあります。</h2>
-      <ul>
-      <% @task.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-    <div class="task_title form">
-      <%= form.label :タスク名, class:"label" %><br>
-      <%= form.text_field :title, class:"input_title"%>
-    </div>
+<% if @task.errors.any? %>
+<div id="error_explanation">
+  <h2><%= @task.errors.count %>件のエラーがあります。</h2>
+  <ul>
+    <% @task.errors.full_messages.each do |msg| %>
+    <li><%= msg %></li>
+    <% end %>
+  </ul>
+</div>
+<% end %>
+<div class="task_title form">
+  <%= form.label :タスク名, class:"label" %><br>
+  <%= form.text_field :title, class:"input_title"%>
+</div>
 
-    <div class="task_content form">
-      <%= form.label :詳しい内容 ,class:"label"%><br>
-      <%= form.text_field :content, class:"input_content" %>
-    </div>
+<div class="task_content form">
+  <%= form.label :詳しい内容 ,class:"label"%><br>
+  <%= form.text_field :content, class:"input_content" %>
+</div>
 
-    <div class="task_deadline form">
-      <%= form.label :終了期限 %>
-      <%= form.date_field :task_deadline %>
-    </div>
+<div class="task_deadline form">
+  <%= form.label :終了期限 %>
+  <%= form.date_field :task_deadline %>
+</div>
 
-    <div class="task_status form">
-      <%= form.label :ステータス %>
-      <%= form.select :status, Task.statuses.keys %>
-    </div>
+<div class="task_status form">
+  <%= form.label :ステータス %>
+  <%= form.select :status, Task.statuses.keys %>
+</div>
 
-    <div class="task_priority form">
-      <%= form.label :優先順位 %>
-      <%= form.select :priority, Task.priorities.keys %>
-    </div>
-    <br>
+<div class="task_priority form">
+  <%= form.label :優先順位 %>
+  <%= form.select :priority, Task.priorities.keys %>
+</div>
+<br>
 
-    <%= form.submit '投稿する', id: 'tasks-form_submit', class:"create_btn" %>
+<div class="field">
+  <%= form.collection_check_boxes(:label_category_ids, LabelCategory.all, :id, :name) %>
+</div>
 
-    <br>
-    <br>
+<%= form.submit '投稿する', id: 'tasks-form_submit', class:"create_btn" %>
+
+<br>
+<br>
 
 <% end %>
 
