--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -37,7 +37,11 @@
 <br>
 
 <div class="field">
-  <%= form.collection_check_boxes(:label_category_ids, LabelCategory.all, :id, :name) %>
+  <% LabelCategory.all.each do |label| %>
+  <%= form.check_box :label_category_ids, { multiple: true, checked: label[:checked], disabled: label[:disabled], include_hidden: false }, label[:id] %>
+  <%= label.name %>
+  <% end %>
+  <%#= form.collection_check_boxes(:label_category_ids, LabelCategory.all, :id, :name) %>
 </div>
 
 <%= form.submit '投稿する', id: 'tasks-form_submit', class:"create_btn" %>
