--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -11,6 +11,8 @@
   <%= form.select :status, Task.statuses.keys, include_blank: true %>
   <%= form.label :Label, class:"form" %>
   <%= form.select :priority, Task.priorities.keys, include_blank: true %>
+  <%= form.label :ラベル一覧, class:"form"  %>
+  <%= form.select("label_category_id", LabelCategory.pluck(:name, :id), { include_blank: true }) %>
   <%= form.submit '検索する', id: 'tasks-index_search-button' %>
 <% end %>
 <br>
@@ -32,7 +34,6 @@
     </thead>
     <tbody>
       <% @tasks.each do |task| %>
-      <% if task.user_id == current_user.id %>
         <tr class="task_row">
           <td><%= task.user.name %></td>
           <td id=<%= "tasks-index_row_title-#{task.id}" %>><%= task.title %></td>
@@ -40,7 +41,7 @@
           <td id=<%= "tasks-index_row_task_deadline-#{task.id}" %>><%= task.task_deadline %></td>
           <td id=<%= "tasks-index_row_status-#{task.id}" %>><%= task.status %></td>
           <td id=<%= "tasks-index_row_priority-#{task.id}" %>><%= task.priority %></td>
-          <td><% task.label_categorys.each do |label| %>
+          <td><% task.label_categories.each do |label| %>
                 <%= label.name %>
               <% end %>
           </td>
@@ -48,7 +49,6 @@
           <td><%= link_to '編集', edit_task_path(task.id) , class:"btn btn-sm btn-outline-secondary"%></td>
           <td><%= link_to '削除', task_path(task.id), method: :delete , data: { confirm: '本当に編集していいですか？' } , class:"btn btn-sm btn-outline-secondary"%></td>
         </tr>
-      <% end %>
       <% end %>
     </tbody>
   </table>
